--- a/SPB-1dz/SPBdz.csproj
+++ b/SPB-1dz/SPBdz.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>SPB_1dz</RootNamespace>
+    <RootNamespace>SPBdz</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
